<resources>
    <string name="app_name">MoMoMusic</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="is_wode">我的</string>
    <string name="is_jingxuan">精选</string>
    <string name="is_bofang">播放</string>
    <string name="is_zhibo">直播</string>
    <string name="is_shipin">视频</string>
    <string name="select">1</string>
    <string name="wodexiaoxi">我的消息</string>
    <string name="meiriqiandao">每日签到</string>
    <string name="qiandao">签到</string>
    <string name="fulizhuanqu">福利专区</string>
    <string name="huiyuanzhongxin">会员中心</string>
    <string name="huiyuantishi">开通会员享特权</string>
    <string name="xiaomishengqiangou">小米省钱购</string>
    <string name="qianhongbao">抢红包</string>
    <string name="kuailailingjiang">快来领奖</string>
    <string name="yijianfankui">意见反馈</string>
    <string name="zhuomiangeci">桌面歌词</string>
    <string name="liuliangbofang">流量播放</string>
    <string name="shuimianmoshi">睡眠模式</string>
    <string name="tingeshiqu">听歌识曲</string>
    <string name="shezhi">设置</string>
    <string name="wodeyinyue">我的音乐</string>
    <string name="heibaixiangpian">黑白相片</string>
    <string name="pingzhiyinyue">开通会员享受品质音乐></string>
    <string name="qiandaovip">签到领取VIP</string>
    <string name="suijibofang">随机播放</string>
    <string name="bendiyinyue">本地音乐</string>
    <string name="zuijinbofang">最近播放</string>
    <string name="shoutindiantai">收听的电台</string>
    <string name="shoucangjia">收藏夹</string>
    <string name="xiazaiguanli">下载管理</string>
    <string name="changjiangedan">我创建的歌单</string>
    <string name="xihuanyinyue">我喜欢的音乐</string>
    <string name="tuijiangedan">无收藏歌单 先听听这些吧</string>
    <string name="gengduo">更多></string>
    <string name="chuangjian">创建</string>
    <string name="suiyue">岁月如潮水,老歌酿情怀</string>
    <string name="tuijian">推荐</string>
    <string name="diantai">电台</string>
    <string name="is_geshou">歌手</string>
    <string name="is_fenlei">分类歌单</string>
    <string name="is_sirendiantai">私人电台</string>
    <string name="is_fulizhuanqu">福利专区</string>
    <string name="tuijiangedan_1">推荐歌单</string>
    <string name="gengduo_1">更多</string>
    <string name="buguanduoshao">不管多少年,这些歌还很好听</string>
    <string name="yiban">一半</string>
    <string name="xueziqian">薛之谦</string>
    <string name="woxiangqianni">我想牵着你的手</string>
    <string name="xusong">许嵩</string>
    <string name="yishengsuoai">一生所爱</string>
    <string name="luguantin">卢冠廷</string>
    <string name="gexingtuijian">个性推荐</string>
    <string name="xinrendiantai">新人必听电台</string>
    <string name="danqu">单曲</string>
    <string name="zhangxin">掌心</string>
    <string name="wuyinliangpin">无印良品</string>
    <string name="pinglunshuliang">1234</string>
    <string name="is_bofanglishi">播放历史</string>
    <string name="is_quanbofenlei">全部分类</string>
    <string name="is_guangbo">广播</string>
    <string name="is_xiaoshuo">小说</string>
    <string name="is_ertong">儿童</string>
    <string name="jingpintuijian">精品推荐</string>
    <string name="lingling">00:00</string>
    <string name="end_minute">03:56</string>
    <string name="is_xiepinglun">写评论</string>
    <string name="comment">初听不知区中意，在听已是曲中人</string>
    <string name="huifu">回复</string>
    <string name="fuzhi">复制</string>
    <string name="jubao">举报</string>
    <string name="pinglunnanzi">小芳芳的评论</string>
    <string name="fuzhidaojinaqieban">复制了到剪切板</string>
    <string name="jubaopinglun">系统已经接受到了你的举报,将会积极处理举报内容,谢谢</string>
    <string name="pinglun">评论</string>
    <string name="weizhaung">伪装 - 大壮</string>
    <string name="mifenreping">米粉热评</string>
    <string name="zuixinpinlun">最新评论</string>
    <string name="nvsheng">女神</string>
    <string name="nanshen">男神</string>
    <string name="xinxiu">新秀</string>
    <string name="shengyinkong">声音控</string>
    <string name="jingwumen">精武门</string>
    <string name="dujia">独家</string>
    <string name="beijing">北京</string>
    <string name="pk">PK</string>
    <string name="chakanpinglun">查看评论</string>
    <string name="xianguanshipin">相关视频</string>
    <string name="duanmeixiaoge">断眉小哥最新现场!越听越上瘾的《How Long》!粉丝很疯狂</string>
    <string name="yongyinyue">用音乐去征服</string>
    <string name="xihuanzheshouge">喜欢这首歌的人会听</string>
    <string name="supperstart">Supperstar</string>
    <string name="supperstar">SuperStar</string>
    <string name="hq">HQ</string>
    <string name="beatrich">Beatrich | Supperstar</string>
    <string name="tuijiangedanliebiao">推荐歌单</string>
    <string name="howlong">How Long</string>
    <string name="charlie">Charlie Puth</string>
    <string name="xiaofangfangbuhuang">小芳芳不慌</string>
    <string name="duoshaoren">1234人观看</string>
    <string name="zhangyunhan">张韵涵的这首《阿叼》,唱出了别样的深情，百听不厌</string>
    <string name="shijian">01:04</string>
    <string name="yanggezuocai">杨哥做菜</string>
    <string name="rensuo">0</string>
    <string name="qishiqi">77</string>
    <string name="kaitonghuiyuan">开通会员</string>
    <string name="id42322">ID:473719676</string>
    <string name="xinren">新人</string>
    <string name="gerenzhuye">个人主页</string>
    <string name="lin">0</string>
    <string name="guanzhu">关注</string>
    <string name="fenshi">粉丝</string>
    <string name="wodeguanli">我的管理</string>
    <string name="xingbi">星币:0</string>
    <string name="chongzhi">充值</string>
    <string name="xingzhuan">星钻:0</string>
    <string name="duihuan">兑换</string>
    <string name="wodezuojia">我的座驾</string>
    <string name="wuzuojia">无座驾</string>
    <string name="wodexinxi">我的信息</string>
    <string name="sangcheng">商城</string>
    <string name="jiazhangkongzhi">家长控制模式</string>
    <string name="yiguanbi">已关闭</string>
    <string name="gerenzhongxin">个人中心</string>
    <string name="fenshisuo">粉丝数:0</string>
    <string name="bianji">编辑</string>
    <string name="lingren">0人</string>
    <string name="wodefenshi">我的粉丝</string>
    <string name="gerenxinxi">个人信息</string>
    <string name="nicheng">昵称</string>
    <string name="fangjianhao">房间号</string>
    <string name="zanwu">暂无</string>
    <string name="yonghuid">用户ID</string>
    <string name="siqi">473195679</string>
    <string name="xingbie">性别</string>
    <string name="baomi">保密</string>
    <string name="xingzuo">星座</string>
    <string name="tizhong">体重</string>
    <string name="shengao">身高</string>
    <string name="sanwei">三围</string>
    <string name="caifudengji">财富等级</string>
    <string name="tadexaingce">TA的相册还没有照片哦~</string>
    <string name="duoxuan">多选</string>
    <string name="zuihouyici">最后一次</string>
    <string name="sunbin">sunbin | 孙斌合集</string>
    <string name="zhoujielun">周杰伦</string>
    <string name="woduoxihuanni">我多喜欢你</string>
    <string name="kaxiu">卡修Rui</string>
    <string name="yishouge">一首歌</string>
    <string name="yinyue">音乐</string>
    <string name="shishouge">10首歌曲</string>
    <string name="strong">/strong/emulated/0</string>
    <string name="quxiao">取消</string>
    <string name="quanxuan">全选</string>
    <string name="yixuanze">已选择0项</string>
    <string name="addToGedan">添加到歌单</string>
    <string name="shanchu">删除</string>
    <string name="shoucang">收藏</string>
    <string name="fenxiang">分享</string>
    <string name="gedan">歌单</string>
    <string name="yi">1</string>

    <string name="true1">true</string>
    <string name="tianjiadao">添加到歌单</string>
    <string name="zhengzaibo">正在播放列表</string>
    <string name="woshoucang">我收藏的单曲</string>
    <string name="xinjiangedan">新建歌单</string>
    <string name="xinjianngedan">新建歌单</string>
    <string name="qingshuru">请输入 歌单名称</string>
    <string name="queding">确定</string>
    <string name="bofangquanbu">播放全部</string>
    <string name="shangxuan">上轩之月</string>
    <string name="xiayisou">下一首播放</string>
    <string name="lingsheng">设为铃声</string>
    <string name="xiugaigequ">修改歌曲信息</string>
    <string name="zhuanji">专辑</string>
    <string name="tianjiagean">添加歌单</string>
    <string name="deleteMusic">删除</string>
    <string name="baocun">保存</string>
    <string name="gequming">歌曲名</string>
    <string name="zhuanjiming">专辑名</string>
    <string name="geshouming">歌手名</string>
    <string name="erlin">2017古风歌曲</string>
    <string name="xiugai">修改</string>
    <string name="gengxinshangmain">更新上面填写的信息</string>
    <string name="fuwuhe">服务和设置</string>
    <string name="gongnengshezhi">功能设置</string>
    <string name="zidong">自动进入播放页</string>
    <string name="zaizhuomian">在桌面上悬浮显示歌词</string>
    <string name="gexinghua">个性化内容推荐</string>
    <string name="bofangbendi">播放本地歌曲时自动优化词图信息</string>
    <string name="tongzhishezhi">通知设置</string>
    <string name="yiduanshijian">一段时间后音乐自动关闭</string>
    <string name="shiheshuiqian">适合睡前听歌时使用</string>
    <string name="xiazaifangshi">下载方式</string>
    <string name="biantinbainxiazai">边听边下载</string>
    <string name="zaixiantingugo">在线听过的歌曲自动下载到本地(付费歌曲除外)</string>
    <string name="danqushoucang">单曲收藏即下载</string>
    <string name="shoucanggequ">收藏歌曲自动下载到本地(付费歌曲除外)</string>
    <string name="jinzaiwlan">仅在WLAN下自动下载</string>
    <string name="jinshiyongyu">仅适用于\"收藏即下载\"</string>
    <string name="wenjianguolv">文件过滤</string>
    <string name="andaxiaoguolv">按大小过滤</string>
    <string name="keyiguolv">可以过滤掉一些比较小的音频</string>
    <string name="zuixiadaxiao">最小大小:</string>
    <string name="lingkeibi">0KB</string>
    <string name="liangkeibi">2MB</string>
    <string name="anshichangguolv">按时长过滤</string>
    <string name="keyiguolvshichangduan">可以过滤时长过短的音频文件</string>
    <string name="zuixiaoshichang">最小时长:</string>
    <string name="lingmiao">0秒</string>
    <string name="wufen">5分</string>
    <string name="anwenjian">按文件大小过滤</string>
    <string name="qingxuanzhe">请选择需要显示的文件夹</string>
    <string name="yinsizhengce">隐私政策</string>
    <string name="zhinengcitu">智能词图优化</string>
    <string name="anwenjianjia">按文件夹过滤</string>
    <string name="wangxinling">王心凌</string>


</resources>
