<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray">

        <Button
            android:id="@+id/cancel"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/quxiao" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/xiugaigequ"
            android:textColor="@android:color/black"
            android:textSize="16sp" />


        <Button
            android:id="@+id/save"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/baocun"
            android:textColor="@android:color/white" />
    </FrameLayout>

    <View
        style="@style/line"
        android:layout_width="match_parent"
        android:layout_height="10dp"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/gequming" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@color/splitLine"></View>

        <EditText
            android:id="@+id/musicNameEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:text="@string/shangxuan"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        style="@style/line"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/geshouming" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@color/splitLine"></View>

        <EditText
            android:id="@+id/artistEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:text="@string/zhoujielun"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        style="@style/line"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/zhuanjiming" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@color/splitLine"></View>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:id="@+id/albumNameEdit"
            android:text="@string/erlin"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        style="@style/line"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"></View>

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@android:color/white">-->

        <!--<Button-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="40dp"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:layout_marginTop="40dp"-->
            <!--android:layout_marginRight="20dp"-->
            <!--android:layout_marginBottom="20dp"-->
            <!--android:background="@drawable/circle_corner"-->
            <!--android:backgroundTint="@android:color/holo_blue_dark"-->
            <!--android:text="@string/gengxinshangmain"-->
            <!--android:textColor="@android:color/white" />-->
    <!--</LinearLayout>-->


    <View
        style="@style/line"
        android:layout_width="match_parent"
        android:layout_height="10dp"></View>


</LinearLayout>